@@ -1,3 +1,7 @@
+2012-04-11 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-06-44
+	* Set a timeout of 3 seconds for version checker.
+
 2012-04-06 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-06-43
 	* Software version checker
